; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mtrr.c_mtrr_update_all_cpus.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mtrr.c_mtrr_update_all_cpus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mtrr_initialized = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@KERN_NOT_SUPPORTED = common dso_local global i32 0, align 4
@mtrr_update_setup = common dso_local global i32 0, align 4
@mtrr_update_action = common dso_local global i32 0, align 4
@mtrr_update_teardown = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtrr_update_all_cpus() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @mtrr_initialized, align 8
  %3 = load i64, i64* @FALSE, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @KERN_NOT_SUPPORTED, align 4
  store i32 %6, i32* %1, align 4
  br label %15

7:                                                ; preds = %0
  %8 = call i32 (...) @MTRR_LOCK()
  %9 = load i32, i32* @mtrr_update_setup, align 4
  %10 = load i32, i32* @mtrr_update_action, align 4
  %11 = load i32, i32* @mtrr_update_teardown, align 4
  %12 = call i32 @mp_rendezvous(i32 %9, i32 %10, i32 %11, i32* null)
  %13 = call i32 (...) @MTRR_UNLOCK()
  %14 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %7, %5
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @MTRR_LOCK(...) #1

declare dso_local i32 @mp_rendezvous(i32, i32, i32, i32*) #1

declare dso_local i32 @MTRR_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
